force-app/main/default/objects/Verification_Change_Event__c/Verification_Change_Event__c.object-meta.xml
<CustomObject>
    <description>Append-only audit log for the Business Hub Verification Framework. Every state transition (Proposed Created, Verified, Override Applied, Source Drift, etc.) writes one row here. Feeds the bulk export (EXP-03) and year-two trust dashboards. Never updated or deleted in normal operation.</description>
    <label>Verification Change Event</label>
    <nameField>
        <displayFormat>VCE-{00000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Change Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>