force-app/main/default/objects/Verification_Change_Event__c/fields/Actor_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who performed the action. UserInfo.getUserId() at the time of the event.</description>
    <label>Actor User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verification Events</relationshipLabel>
    <relationshipName>Verification_Events</relationshipName>
    <type>Lookup</type>
</CustomField>