force-app/main/default/objects/Verification_Change_Event__c/fields/After_Payload__c.field-meta.xml
<CustomField>
    <fullName>After_Payload__c</fullName>
    <description>JSON snapshot of the source payload (or override delta) after the transition.</description>
    <label>After Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>