force-app/main/default/objects/Verification_Change_Event__c/fields/Before_Payload__c.field-meta.xml
<CustomField>
    <fullName>Before_Payload__c</fullName>
    <description>JSON snapshot of the source payload before the transition (where applicable).</description>
    <label>Before Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>