force-app/main/default/objects/Verification_Change_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description
  >The transition that occurred. Constrained to the values the service emits.</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed Created</fullName>
            </value>
            <value>
                <fullName>Proposed Updated</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Override Applied</fullName>
            </value>
            <value>
                <fullName>Source Changed Under Verified</fullName>
            </value>
            <value>
                <fullName>Manual Created</fullName>
            </value>
            <value>
                <fullName>Manual Superseded</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Manual Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>