force-app/main/default/objects/Verification_Change_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Stable identifier from the source system. Useful for debugging and for correlating events when records are deleted/recreated.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>