force-app/main/default/objects/Verification_Change_Event__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>System.now() at the moment of the transition. Indexed for time-windowed queries.</description>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>