force-app/main/default/objects/Verification_Change_Event__c/fields/Subject_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_Record_Id__c</fullName>
    <description>Id of the verifiable record this event refers to. Polymorphic by design — we don&apos;t lock the event log to a single object type so the same log can serve every Business Hub module.</description>
    <externalId>true</externalId>
    <label>Subject Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>